# leidsaOracle

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: launch.json  settings.local.json
migrations/: env.py
migrations/versions/: 2026_03_13_001_initial_schema.py
scripts/: entrypoint.sh
src/: main.py
src/analytics/: balance.py  distribution.py  engine.py  entropy.py  frequency.py  hot_cold.py  monte_carlo.py  pairs.py  recency.py  triplets.py
src/api/: deps.py  router.py
src/api/routes/: analysis.py  backtest.py  config.py  draws.py  generate.py  health.py  import_data.py
src/backtesting/: metrics.py  reporter.py  walk_forward.py
src/config/: constants.py  settings.py  weights.py
src/database/: connection.py  engine.py  models.py  repository.py
src/explainability/: narrator.py  templates.py
src/generator/: combination_generator.py  constraints.py  diversity.py  pool_builder.py
src/importer/: excel_reader.py  importer_service.py
src/scoring/: ensemble.py  feature_scores.py  ranking.py
src/scraper/: base_parser.py  client.py  conectate_parser.py  loterias_dom_parser.py  scraper_service.py
src/ui/: app.py
src/validator/: dedup.py  normalizer.py  schemas.py
tasks/: lessons.md  todo.md
templates/: leidsa_import_template.xlsx
tests/: conftest.py
tests/test_analytics/: test_analytics.py
tests/test_backtesting/: test_backtesting.py
tests/test_generator/: test_generator.py
tests/test_scoring/: test_scoring.py
tests/test_validator/: test_validator.py
(+10 files in other folders)
